--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -19,3 +19,11 @@
 # CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=2
 
 # CONFIG_PINCTRL=y
+
+# Enable ZMK Display support
+CONFIG_ZMK_DISPLAY=y
+
+# Specifically for nice!view, enable the widget for a better UI
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
