--- a/build.yaml
+++ b/build.yaml
@@ -20,3 +20,7 @@ include:
     shield: hillside52_left
   - board: nice_nano_v2
     shield: hillside52_right
+  - board: nice_nano_v2
+    shield: hillside52_left nice_view_adapter
+  - board: nice_nano_v2
+    shield: hillside52_right nice_view_adapter
