--- a/config/west.yml
+++ b/config/west.yml
@@ -7,5 +7,9 @@ manifest:
       remote: zmkfirmware
       revision: v0.3
       import: app/west.yml
+    # Add this new entry:
+    - name: nice-view
+      remote: zmkfirmware
+      revision: main
   self:
     path: config
