--- a/config/boards/shields/hillside52/hillside52.zmk.yml
+++ b/config/boards/shields/hillside52/hillside52.zmk.yml
@@ -6,9 +6,10 @@ url: https://github.com/mmccoyd/hillside/
 requires: [pro_micro]
 features:
   - keys
-  - encoder
-  - underglow
   - display
+layouts:
+  - transform: default_transform
+    kscan: kscan0
 siblings:
   - hillside52_left
   - hillside52_right
