--- a/config/boards/shields/hillside52/hillside52.dtsi
+++ b/config/boards/shields/hillside52/hillside52.dtsi
@@ -1,15 +1,12 @@
-/*
- * Copyright (c) 2021-2022 The ZMK Contributors
- *
- * SPDX-License-Identifier: MIT
- */
-
+/* ... includes at the top ... */
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <physical_layouts.dtsi>
 
 / {
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &physical_layout0;
     };
 
     default_transform: keymap_transform_0 {
@@ -28,11 +25,74 @@ RC(3,0) RC(3,1) RC(3,2)         RC(4,1) RC(4,2) RC(4,3) RC(4,4)   RC(4,7) RC(4,8
         >;
     };
 
+    physical_layout0: physical_layout_0 {
+        compatible = "zmk,physical-layout";
+        display-name = "Default Layout";
+        transform = <&default_transform>;
+        kscan = <&kscan0>;
+
+        keys  //                     w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 100 100    0   75       0     0     0>
+            , <&key_physical_attrs 100 100  100   75       0     0     0>
+            , <&key_physical_attrs 100 100  200   25       0     0     0>
+            , <&key_physical_attrs 100 100  300    0       0     0     0>
+            , <&key_physical_attrs 100 100  400   25       0     0     0>
+            , <&key_physical_attrs 100 100  500   37       0     0     0>
+            , <&key_physical_attrs 100 100 1100   37       0     0     0>
+            , <&key_physical_attrs 100 100 1200   25       0     0     0>
+            , <&key_physical_attrs 100 100 1300    0       0     0     0>
+            , <&key_physical_attrs 100 100 1400   25       0     0     0>
+            , <&key_physical_attrs 100 100 1500   75       0     0     0>
+            , <&key_physical_attrs 100 100 1600   75       0     0     0>
+            , <&key_physical_attrs 100 100    0  175       0     0     0>
+            , <&key_physical_attrs 100 100  100  175       0     0     0>
+            , <&key_physical_attrs 100 100  200  125       0     0     0>
+            , <&key_physical_attrs 100 100  300  100       0     0     0>
+            , <&key_physical_attrs 100 100  400  125       0     0     0>
+            , <&key_physical_attrs 100 100  500  137       0     0     0>
+            , <&key_physical_attrs 100 100 1100  137       0     0     0>
+            , <&key_physical_attrs 100 100 1200  125       0     0     0>
+            , <&key_physical_attrs 100 100 1300  100       0     0     0>
+            , <&key_physical_attrs 100 100 1400  125       0     0     0>
+            , <&key_physical_attrs 100 100 1500  175       0     0     0>
+            , <&key_physical_attrs 100 100 1600  175       0     0     0>
+            , <&key_physical_attrs 100 100    0  275       0     0     0>
+            , <&key_physical_attrs 100 100  100  275       0     0     0>
+            , <&key_physical_attrs 100 100  200  225       0     0     0>
+            , <&key_physical_attrs 100 100  300  200       0     0     0>
+            , <&key_physical_attrs 100 100  400  225       0     0     0>
+            , <&key_physical_attrs 100 100  500  237       0     0     0>
+            , <&key_physical_attrs 100 100  625  280    3000     0     0>
+            , <&key_physical_attrs 100 100  990  330 (-3000)     0     0>
+            , <&key_physical_attrs 100 100 1100  237       0     0     0>
+            , <&key_physical_attrs 100 100 1200  225       0     0     0>
+            , <&key_physical_attrs 100 100 1300  200       0     0     0>
+            , <&key_physical_attrs 100 100 1400  225       0     0     0>
+            , <&key_physical_attrs 100 100 1500  275       0     0     0>
+            , <&key_physical_attrs 100 100 1600  275       0     0     0>
+            , <&key_physical_attrs 100 100    0  375       0     0     0>
+            , <&key_physical_attrs 100 100  100  375       0     0     0>
+            , <&key_physical_attrs 100 100  200  375       0     0     0>
+            , <&key_physical_attrs 100 100  340  325       0     0     0>
+            , <&key_physical_attrs 100 100  460  335    1500     0     0>
+            , <&key_physical_attrs 100 100  575  370    3000     0     0>
+            , <&key_physical_attrs 100 100  675  430    4500     0     0>
+            , <&key_physical_attrs 100 100  940  510 (-4500)     0     0>
+            , <&key_physical_attrs 100 100 1035  425 (-3000)     0     0>
+            , <&key_physical_attrs 100 100 1140  360 (-1500)     0     0>
+            , <&key_physical_attrs 100 100 1260  325       0     0     0>
+            , <&key_physical_attrs 100 100 1400  375       0     0     0>
+            , <&key_physical_attrs 100 100 1500  375       0     0     0>
+            , <&key_physical_attrs 100 100 1600  375       0     0     0>
+            ;
+
+    };
+
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         label = "KSCAN";
 
-        diode-direction = "col2row";
+    diode-direction = "col2row";
         row-gpios
             = <&pro_micro 5 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -40,30 +100,5 @@ RC(3,0) RC(3,1) RC(3,2)         RC(4,1) RC(4,2) RC(4,3) RC(4,4)   RC(4,7) RC(4,8
             , <&pro_micro 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&pro_micro 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
-        
-    };
-
-    left_encoder: encoder_left {
-            compatible = "alps,ec11";
-            label = "LEFT_ENCODER";
-            a-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-            b-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-            resolution = <4>;
-            status = "disabled";
-        };
-
-    right_encoder: encoder_right {
-            compatible = "alps,ec11";
-            label = "RIGHT_ENCODER";
-            a-gpios = <&pro_micro 21 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-            b-gpios = <&pro_micro 20 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
-            resolution = <4>;
-            status = "disabled";
-        };
-
-    sensors {
-            compatible = "zmk,keymap-sensors";
-            sensors = <&left_encoder &right_encoder>;
-        };
-    
+    };   
 };
