--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: hillside52_left nice_view
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: hillside52_right nice_view
