Adjusting pin definitions for main update

--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -1,30 +1,21 @@
 # Copyright (c) 2021-2022 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
-# Encoders (Uncomment these two line to add support to your firmware)
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-# RGB Underglow (Uncomment these two lines to add support to your firmware)
-# RGB quickly drains battery power
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-
-# Boost the Bluetooth signal only if having connection issues
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=2
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=2
-
-# CONFIG_PINCTRL=y
-
-# Enable ZMK Display support
+# --- DISPLAY SETTINGS ---
+# Enable the Nice!View Display
 CONFIG_ZMK_DISPLAY=y
+# Use the Nice!View custom widgets (optional, looks better on this screen)
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y 
+# (Note: The nice_view shield usually handles the widget selection automatically)
 
-# Specifically for nice!view, enable the widget for a better UI
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# --- DISABLE HARDWARE NOT PRESENT ---
+# Disable Encoders
+CONFIG_EC11=n
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
+
+# Disable RGB Underglow
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+
+# Boost Bluetooth (Keep this if you had connection issues)
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
