Disable 2M PHY for Bluetooth configuration

--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -16,3 +16,4 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 
 # Boost Bluetooth (Keep this if you had connection issues)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_PHY_2M=n
