--- a/build.yaml
+++ b/build.yaml
@@ -3,3 +3,5 @@ include:
     shield: hillside52_left nice_view
   - board: nice_nano
     shield: hillside52_right nice_view
+  - board: nice_nano
+    shield: settings_reset
