--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -17,3 +17,7 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
 # Boost Bluetooth (Keep this if you had connection issues)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_CTLR_PHY_2M=n
+
+# Enable Battery Reporting for nice!view
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
