Update display settings in hillside52.conf

--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -2,11 +2,14 @@
 # SPDX-License-Identifier: MIT
 
 # --- DISPLAY SETTINGS ---
-# Enable the Nice!View Display
+# Enable the display hardware
 CONFIG_ZMK_DISPLAY=y
-# Use the Nice!View custom widgets (optional, looks better on this screen)
-# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y 
-# (Note: The nice_view shield usually handles the widget selection automatically)
+
+# DISABLE the built-in ZMK status screen to avoid conflicts
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
+
+# ENABLE the custom nice!view vertical widgets
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # --- DISABLE HARDWARE NOT PRESENT ---
 # Disable Encoders
