--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -1,26 +1,15 @@
 # Copyright (c) 2021-2022 The ZMK Contributors
 # SPDX-License-Identifier: MIT
 
-# --- DISPLAY SETTINGS ---
-# Enable the display hardware
+# ---  DISPLAY SETTINGS  ---
 CONFIG_ZMK_DISPLAY=y
-
-# DISABLE the built-in ZMK status screen to avoid conflicts
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-
-# ENABLE the custom nice!view vertical widgets
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# --- DISABLE HARDWARE NOT PRESENT ---
-# Disable Encoders
-CONFIG_EC11=n
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=n
+# ---  BATTERY SETTINGS  ---
+# This allows the battery level to be read and sent to the display/host
+CONFIG_ZMK_BATTERY_REPORTING=y
 
-
-# Boost Bluetooth (Keep this if you had connection issues)
+# --- BLUETOOTH SETTINGS --- 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_CTLR_PHY_2M=n
-
-# Enable Battery Reporting for nice!view
-CONFIG_ZMK_BATTERY_REPORTING=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
